# oppFinalProject

./: CMakeLists.txt  README.md  main.cpp  out.txt
GymApp/: imgui.ini
GymApp/data/: admins.txt  equipment.txt  owners.txt  payments.txt  plans.txt  trainers.txt
models/: Admin.cpp  Admin.h  Equipment.cpp  Equipment.h  Member.cpp  Member.h  Membership.cpp  Membership.h  MembershipPlan.cpp  MembershipPlan.h  Owner.cpp  Owner.h  Payment.cpp  Payment.h  Person.cpp  Person.h  Trainer.cpp  Trainer.h  WorkoutPlan.cpp  WorkoutPlan.h
ui/: AdminDashboard.cpp  AdminDashboard.h  LoginScreen.cpp  LoginScreen.h  MemberDashboard.cpp  MemberDashboard.h  OwnerDashboard.cpp  OwnerDashboard.h  TrainerDashboard.cpp  TrainerDashboard.h
utils/: FileManager.cpp  FileManager.h
